RESOLVED FIXED241010
Parallel shader compilation does not work due to early validation in WebGLRenderingContextBase::compileShader
https://bugs.webkit.org/show_bug.cgi?id=241010
Summary Parallel shader compilation does not work due to early validation in WebGLRen...
Kimmo Kinnunen
Reported 2022-05-27 06:31:00 PDT
Parallel shader compilation does not work due to early validation in WebGLRenderingContextBase::compileShader m_context->compileShader(shader.object()); GCGLint value = m_context->getShaderi(shader.object(), GraphicsContextGL::COMPILE_STATUS); shader.setValid(value);
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-27 06:31:09 PDT
EWS
Comment 2 2022-08-19 07:38:52 PDT
Committed 253593@main (bcacfd6ffbd0): <https://commits.webkit.org/253593@main> Reviewed commits have been landed. Closing PR #3430 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.