Skip shader compile status check on ANGLE https://bugs.webkit.org/show_bug.cgi?id=241010

Reviewed by Kimmo Kinnunen.

* To not stall the pipeline, do not query shader compile
status immediately after compilation when ANGLE is used.

* Removed the test that expects shader compilation logs
to be printed to the console.

Drive-by:
* Return true from InspectorShaderProgram::updateShader when
compiling or linking fail to avoid Inspector UI crash on
live-editing shaders in debug builds. Update the test.

* LayoutTests/fast/canvas/webgl/shader-compile-logging-expected.txt: Removed.
* LayoutTests/fast/canvas/webgl/shader-compile-logging.html: Removed.
* LayoutTests/inspector/canvas/updateShader-webgl-expected.txt:
* LayoutTests/inspector/canvas/updateShader-webgl.html:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::compileShader):
* Source/WebCore/html/canvas/WebGLShader.cpp:
(WebCore::WebGLShader::WebGLShader):
* Source/WebCore/html/canvas/WebGLShader.h:
* Source/WebCore/inspector/InspectorShaderProgram.cpp:
(WebCore::InspectorShaderProgram::updateShader):

Canonical link: https://commits.webkit.org/253593@main