Source/WebCore/html/canvas/WebGLShader.h
@@ -42,8 +42,10 @@ public:
 
     void setSource(const String& source) { m_source = source; }
 
+#if !USE(ANGLE)
     bool isValid() const { return m_isValid; }
     void setValid(bool valid) { m_isValid = valid; }
+#endif
 
 private:
     WebGLShader(WebGLRenderingContextBase&, GCGLenum);
@@ -52,7 +54,9 @@ private:
 
     GCGLenum m_type;
     String m_source;
-    bool m_isValid;
+#if !USE(ANGLE)
+    bool m_isValid = false;
+#endif
 };
 
 } // namespace WebCore
